--- a/tumblr_blog/app/views/users/new.html.erb
+++ b/tumblr_blog/app/views/users/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Sign Up</h1>
+<%= form_for(@user) do |f| %>
+	<%= f.label :username %>
+	<%= f.text_field :username %><br />
+	<%= f.label :bio %>
+	<%= f.text_area :bio %><br />
+	<%= f.label :password %>
+	<%= f.password_field :passord %><br >
+	<%= f.submit :create %>
+<% end %>
