--- a/tumblr_blog/app/views/users/new.html.erb
+++ b/tumblr_blog/app/views/users/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+
+
+<%= "If you already have an account, you may " link_to "sign in", login_path %>
