--- a/tumblr_blog/app/views/users/show.html.erb
+++ b/tumblr_blog/app/views/users/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>User</h1>
+<h3><%= @user.username %></h3>
+<ul>
+	<li>Bio: <%= @user.bio %></li>
+</ul>
+
+<h1>New Post</h1>
+<%= form_for(@new_post) do |f| %>
+	<%= f.label :body %><br />
+	<%= f.text_area :body %><br />
+	<%= f.submit :post %>
+<% end %> 
+ 
+<h3><%= "#{@user.username}'s Posts" %></h3>
+<ul>
+	<% @user.posts.each do |post| %>
+		<li><%= post.body %> (<%= link_to "DELETE", post_path(post), method: "delete" %>)</li>
+	<% end %>
+</ul>
+
