--- a/tumblr_blog/app/views/users/new.html.erb
+++ b/tumblr_blog/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
 	<%= f.label :bio %>
 	<%= f.text_area :bio %><br />
 	<%= f.label :password %>
-	<%= f.password_field :passord %><br >
+	<%= f.password_field :password %><br >
 	<%= f.submit :create %>
 <% end %>
 
