--- a/tumblr_blog/app/views/users/index.html.erb
+++ b/tumblr_blog/app/views/users/index.html.erb
@@ -2,6 +2,6 @@
 <h1>Users List</h1>
 <ul>
 	<% @users.each do |user| %>
-		<li><%= user.username %></li>
+		<li> <%= link_to "#{user.username}", user_path(user) %></li>
 	<% end %>
 </ul>
