--- a/tumblr_blog/app/views/users/show.html.erb
+++ b/tumblr_blog/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1><%= @user.username %></h1>
+<p><%= @user.bio %></p>
+
+<% if current_user == @user%>
+<p><%= link_to "Update your profile", edit_user_path %></p>
+<% end %>
+<br/>
+<%= link_to "Back", :back %>
