--- a/tumblr_blog/app/views/users/show.html.erb
+++ b/tumblr_blog/app/views/users/show.html.erb
@@ -8,16 +8,23 @@
 <br/>
 <%= link_to "Back", :back %>
 
+
+<% if current_user == @user %>
 <h1>New Post</h1>
 <%= form_for(@new_post) do |f| %>
 	<%= f.label :body %><br />
 	<%= f.text_area :body %><br />
 	<%= f.submit :post %>
 <% end %> 
+<% end %>
  
 <h3><%= "#{@user.username}'s Posts" %></h3>
 <ul>
 	<% @user.posts.each do |post| %>
-		<li><%= post.body %> (<%= link_to "DELETE", post_path(post), method: "delete" %>)</li>
+		<li><%= post.body %> 
+
+		<% if current_user == @user %>
+		(<%= link_to "DELETE", post_path(post), method: "delete" %>)</li>
+		<% end %>
 	<% end %>
 </ul>
