--- a/tumblr_blog/app/views/posts/show.html.erb
+++ b/tumblr_blog/app/views/posts/show.html.erb
@@ -1,1 +1,12 @@
 <p><%= @post.body %></p>
+
+<p> Comments </p>
+<ul>
+	<% @post.comments.each do |comment| %>
+		<li><%= comment.body %> 
+
+		<% if current_user == @user %>
+		(<%= link_to "DELETE", comment_path(comment), method: "delete" %>)</li>
+		<% end %>
+	<% end %>
+</ul>
