--- a/tumblr_blog/app/views/posts/show.html.erb
+++ b/tumblr_blog/app/views/posts/show.html.erb
@@ -1,1 +1,13 @@
 <p><%= @post.body %></p>
+
+
+
+<!-- comments form -->
+<p> create new comment:</p>
+<%= form_for(@new_comment) do |f| %>
+	<%= f.label :body %><br />
+	<%= f.text_area :body %><br />
+	<%= f.submit :comment %>
+<% end %> 
+
+<!-- list of comments -->
