--- a/tumblr_blog/app/views/posts/show.html.erb
+++ b/tumblr_blog/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
 
 <!-- comments form -->
 <p> create new comment:</p>
-<%= form_for(@new_comment) do |f| %>
+<%= form_for(@new_comment, url: post_comments_path(@post)) do |f| %>
 	<%= f.label :body %><br />
 	<%= f.text_area :body %><br />
 	<%= f.submit :comment %>
@@ -16,7 +16,7 @@
 		<li><%= comment.body %> 
 
 		<% if current_user == @user %>
-		(<%= link_to "DELETE", comment_path(comment), method: "delete" %>)</li>
+		| (<%= link_to "DELETE", post_comment_path(comment), method: "delete" %>)</li>
 		<% end %>
 	<% end %>
 </ul>
